--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "apollo-server": "^2.22.2",
     "argon2": "^0.27.2",
+    "aws-sdk": "^2.885.0",
     "bcrypt": "^5.0.1",
     "config": "^3.3.6",
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
+    "multer": "^1.4.2",
+    "uuid": "^8.3.2",
     "validator": "^13.5.2"
   },
   "devDependencies": {
